--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML>
+aft<!DOCTYPE HTML>
 <html>
     <body>
     <h1> Restarting</h1>
     <p> This thing exists because I want to learn all of these again</p>
     <p1 title="I am an idiot"></p1>
     <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x"></a>
-    <img src="Screenshot 2025-11-25 022002.png" alt="Minecraft"
+    <img src="minecraft.png" alt="Minecraft"
     </body>
 </html>
+
