--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-aft<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
     <body>
     <h1> Restarting</h1>
@@ -8,4 +8,5 @@ aft<!DOCTYPE HTML>
     <img src="minecraft.png" alt="Minecraft"
     </body>
 </html>
+
 
