--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <p> This thing exists because I want to learn all of these again</p>
     <p1 title="I am an idiot"></p1>
     <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x"></a>
-    <img src="minecraft.png" alt="Minecraft"
+    <img src="Screenshot.png" alt="Minecraft"
     </body>
 </html>
+
 
 
