--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <body>
     <h1> Restarting</h1>
     <p> This thing exists because I want to learn all of these again</p>
-    <p1 title="I am an idiot"></p1>
+    <p title="I am an idiot"></p>
     <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x"></a>
-    <img src="Screenshot.png" alt="Minecraft"
+    <img src="Screenshot.png" alt="Minecraft">
     </body>
 </html>
+
 
 
 
