--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <html>
-    <body>
     <h1> Restarting</h1>
-    <p> This thing exists because I want to learn all of these again</p>
-    <p title="I am an idiot"></p>
-    <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x"></a>
-    <img src="Screenshot.png" alt="Minecraft">
+    <body>
+        <p> This thing exists because I want to learn all of these again</p>
+        <p title="I am an idiot"></p>
+        <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x" target="_blank"></a>
+        <br>
+        <img src="Screenshot.png" alt="Minecraft" />
     </body>
 </html>
+
 
 
 
