--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <p title="I am an idiot"></p>
         <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x" target="_blank"></a>
         <br>
-        <img src="Screenshot.png" alt="Minecraft" />
+        <img src="html_pratice_img/Screenshot.png" alt="Minecraft" />
     </body>
 </html>
+
 
 
 
