--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <body>
         <p> This thing exists because I want to learn all of these again</p>
         <p title="I am an idiot"></p>
-        <a href="https://youtu.be/AU5VpETlXi8?si=TFH25P1_G3JnVO5x" target="_blank"></a>
+        <a href="https://www.youtube.com/watch?v=AU5VpETlXi8" target="_blank"></a>
         <br>
         <img src="html_pratice_img/Screenshot.png" alt="Minecraft" />
     </body>
 </html>
+
 
 
 
